Fix content jumping on mobile devices, add some missing units

--- a/content/themes/light/sass/layout/_general.scss
+++ b/content/themes/light/sass/layout/_general.scss
@@ -50,24 +50,25 @@ body {
             }
           }
         }
-      }
 
-      .type {
-        max-height: 100;
-        height: 100;
-        overflow: hidden;
+        .type {
+          max-height: 100px;
+          height: 100px;
+          overflow: hidden;
 
-        p {
-          font-family: $font-monospace;
-          color: rgba($color-text, .8);
-          font-size: 1rem;
-          margin-top: 0;
-          padding-top: 0;
+          p {
+            font-family: $font-monospace;
+            color: rgba($color-text, .8);
+            font-size: 1rem;
+            margin-top: 0;
+            padding-top: 0;
 
-          @media (max-width: $container-ipad) {
-            min-height: 50;
-            overflow: hidden;
-            max-height: 60;
+            @media (max-width: $container-ipad) {
+              min-height: 50px;
+              overflow: hidden;
+              max-height: 60px;
+              font-size: .8rem;
+            }
           }
         }
       }
@@ -102,8 +103,8 @@ body {
       }
 
       .content-area {
-        padding-top: 50;
-        padding-bottom: 50;
+        padding-top: 50px;
+        padding-bottom: 50px;
       }
 
       .logocol {
@@ -303,7 +304,7 @@ body {
 
           &.forgetmetnot {
             margin-top: 0;
-            margin-bottom: 20;
+            margin-bottom: 20px;
 
             label {
               display: inline-block;
@@ -315,7 +316,7 @@ body {
         label {
           display: block;
           clear: both;
-          padding: 10 0;
+          padding: 10px 0;
         }
 
         input {
@@ -331,7 +332,7 @@ body {
 
       .message {
         padding: 15px !important;
-        margin-bottom: 20;
+        margin-bottom: 20px;
       }
 
       .hentry {
@@ -342,7 +343,7 @@ body {
 
           @media (max-width: $container-mobile) {
             @include stack();
-            margin-bottom: 20;
+            margin-bottom: 20px;
           }
         }
       }
@@ -352,7 +353,7 @@ body {
 
         @media (max-width: $container-mobile) {
           @include stack();
-          margin-bottom: 20;
+          margin-bottom: 20px;
         }
 
         img {
@@ -368,8 +369,8 @@ body {
       }
 
       #tribe-events-pg-template {
-        margin-top: 50;
-        margin-bottom: 50;
+        margin-top: 50px;
+        margin-bottom: 50px;
       }
 
       .gallery {
@@ -396,18 +397,18 @@ body {
       }
 
       .wp-social-login-connect-with {
-        margin-top: 40 !important;
+        margin-top: 40px !important;
         clear: both;
         display: block;
       }
 
       .wp-social-login-provider-list {
-        padding-top: 10;
-        padding-bottom: 10;
+        padding-top: 10px;
+        padding-bottom: 10px;
         padding-left: 0;
         padding-right: 0;
         margin-top: 0;
-        margin-bottom: 20;
+        margin-bottom: 20px;
 
         img {
           width: auto !important;
@@ -424,7 +425,7 @@ body {
 
       .tribe-events-single-event-description {
         p.meetup-author {
-          margin-top: 30 !important;
+          margin-top: 30px !important;
           display: block;
           line-height: 1.3 !important;
           opacity: .75;
