--- a/content/themes/light/sass/views/_front-page.scss
+++ b/content/themes/light/sass/views/_front-page.scss
@@ -187,10 +187,6 @@
       padding-bottom: 0;
     }
 
-    .type {
-      margin-bottom: 80px;
-    }
-
     h2 {
       margin-bottom: 0;
     }
